AFS_Dev/src/objects/Financial_Summary__c.object
<CustomObject>
    <fields>
        <fullName>Financial_Summary_Type__c</fullName>
        <label>Financial Summary Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HW_SW_Costs__c</fullName>
        <label>HW/SW Costs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OI_Value__c</fullName>
        <formula>Revenue__c - Total_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OI Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OI__c</fullName>
        <formula>IF( Revenue__c = 0, 0,  Round((OI_Value__c /Revenue__c)*1000,0)/1000)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OI %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Financial Summary</relationshipLabel>
        <relationshipName>Financial_Summary</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Other_Costs__c</fullName>
        <label>Other Costs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <label>TCR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subcontractor_Expenses__c</fullName>
        <label>Subcontractor Expenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_Difference__c</fullName>
        <formula>IF( OI__c = 0, 0,  OI__c -  Target_Percentage__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Difference %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Target_Percentage__c</fullName>
        <label>Target OI%</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Costs__c</fullName>
        <label>Total Costs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WTD_Current_Revenue__c</fullName>
        <formula>Revenue__c *  Opportunity__r.Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WTD Current Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Financial Summary</label>
    <nameField>
        <displayFormat>FS-{00000000}</displayFormat>
        <label>Financial Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Summary</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>